--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
 img {
   width: 200px;
   border-radius: 50%;
-  align-items: center;
-  margin: 20px 0px 0px 20px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 body {
